--- a/How-to-FMI/bower.json
+++ b/How-to-FMI/bower.json
@@ -19,7 +19,9 @@
     "angular-route": "^1.6.1",
     "angular-resource": "^1.6.1",
     "underscore": "^1.8.3",
-    "angular-bootstrap": "^2.5.0"
+    "angular-bootstrap": "^2.5.0",
+    "fullcalendar": "^3.4.0",
+    "angular-ui-calendar": "^1.0.2"
   },
   "resolutions": {
     "angular": "^1.6.3"
