--- a/How-to-FMI/package.json
+++ b/How-to-FMI/package.json
@@ -13,6 +13,7 @@
     "babel-preset-env": "^1.2.2",
     "babel-preset-es2015": "^6.24.0",
     "bower": "^1.8.0",
+    "eslint-grunt": "^1.0.0",
     "grunt": "^1.0.1",
     "grunt-angular-templates": "^1.1.0",
     "grunt-babel": "^6.0.0",
