--- a/How-to-FMI/rest_api/requirements.txt
+++ b/How-to-FMI/rest_api/requirements.txt
@@ -5,4 +5,6 @@ Flask-Script==2.0.5
 Flask-SQLAlchemy==2.1
 SQLAlchemy==1.1.5
 flask-mongoengine==0.7.5
-pymongo==3.6.0
+pymongo==2.9
+Flask-PyMongo==0.3.1
+Flask-JWT==0.3.2
